--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
 }
-
 body{
     line-height: 1.5;
     font-family: 'Roboto', sans-serif;
@@ -16,4 +15,22 @@ ul{
 }
 a{
     text-decoration: none;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 24px;
+    color: #f9faf8;
+    background-color: #1f2937;
+    padding: 10px 80px 10px 80px;
+}
+.header-nav ul{
+    display: flex;
+    gap: 20px;
+    font-size: 18px;
+}
+.header-nav a{
+    color: #e5e7eb; 
 }
