--- a/style.css
+++ b/style.css
@@ -91,3 +91,18 @@ a{
     border: 4px solid blue;
     height: auto;
 }
+
+.testimonial{
+    background-color: #e5e7eb;
+    padding: 80px 250px;
+}
+.quote{
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+}
+.client-name{
+    font-size: 26px;
+    font-weight: 900;
+    text-align: end;
+}
