--- a/style.css
+++ b/style.css
@@ -106,3 +106,23 @@ a{
     font-weight: 900;
     text-align: end;
 }
+
+.cta{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #f9faf8;
+    background-color: #3882f6;
+    border: solid;
+    border-radius: 6px;
+    border-color: transparent;
+    padding: 50px ;
+    margin: 60px;
+}
+.cta-button button{
+    border: 2px solid;
+    border-radius: 6px;
+    padding: 5px 15px;
+    color: #f9faf8;
+    background-color: #3882f6;
+}
