--- a/style.css
+++ b/style.css
@@ -126,3 +126,17 @@ a{
     color: #f9faf8;
     background-color: #3882f6;
 }
+
+.footer{
+    text-align: center;
+    align-items: center;
+    color: #f9faf8;
+    padding: 20px;
+    gap: 10px;
+    background-color: #1f2937;
+}
+footer a{
+    text-decoration: none;
+    color: #f9faf8;
+    margin: 15px;
+}
